--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <h2 class="page-section-title">Meet Our Friends</h2>
         <div class="pet-filter">
           <p>
-            Show me: <button class="active" data-filter="All">All Pets</button>
+            Show me: <button class="active" data-filter="all">All Pets</button>
             <button data-filter="dog">Only Dogs</button>
             <button data-filter="cat">Only Cats</button>
           </p>
